# defense-deepfake-detection-attacks

./: .gitignore  README.md  pyproject.toml
app/: demo.py  streamlit_app.py
configs/: experiment_adversarial_training.yaml  experiment_attack_eval.yaml  experiment_baseline.yaml  experiment_full_robustness.yaml
models/: .gitkeep
reports/: generate_report.py
reports/runs/adversarial_training/: attack_report.json  clean_metrics.json  comparison_report.json  comparison_table.md  metrics_42_1783136909.json
reports/runs/dino_mac/: attack_report.json  config_42_1783136674.yaml  defended_jpeg_metrics.json  metrics_42_1783136809.json
reports/runs/full_robustness_eval/: attack_report.json  clean_metrics.json  comparison_report.json  comparison_table.md  metrics_42_1783140985.json
scripts/: generate_samples.py  run_adversarial_training.py  run_attack_eval.py  run_pipeline.py  run_robustness_eval.py
src/: __init__.py  cli.py  config.py  pipeline.py  training.py
src/attacks/: __init__.py  autoattack.py  cw.py  deepfool.py  fgsm.py  ifgsm.py  mifgsm.py  nifgsm.py  pgd.py  square.py
src/core/: __init__.py  base.py
src/data/: __init__.py  real.py  synthetic.py
src/defenses/: __init__.py  adversarial_training.py  preprocessing.py
src/evaluation/: metrics.py
src/generation/: __init__.py  toy_generator.py
src/models/: __init__.py  dino_mac.py  tiny_cnn.py
src/utils/: __init__.py  reproducibility.py
tests/: test_smoke.py
