[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepfake-defense"
version = "0.1.0"
description = "Research codebase for adversarial defenses in deepfake detection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Research Team" }]
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "torch>=2.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
app = ["streamlit>=1.34", "pandas>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
deepfake-defense = "deepfake_defense.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
